--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+# Production dependencies
 fastapi==0.116.1
 uvicorn[standard]==0.35.0
 sqlalchemy==2.0.41
@@ -14,3 +15,11 @@ httpx==0.28.1
 python-dotenv==1.1.1
 bcrypt==4.3.0
 cryptography==45.0.5
+greenlet==3.1.1
+
+# Development dependencies
+black==23.12.1
+flake8==7.0.0
+isort==5.13.2
+mypy==1.8.0
+pytest-watch==4.2.0
