--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,6 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./docker/init-db.sql:/docker-entrypoint-initdb.d/init-db.sql
     networks:
       - clinical_network
     healthcheck:
@@ -29,9 +28,11 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: clinical_sample_service
+    env_file:
+      - .env
     environment:
       - DATABASE_URL=postgresql+asyncpg://${POSTGRES_USER:-clinical_user}:${POSTGRES_PASSWORD:-clinical_pass_2024}@db:5432/${POSTGRES_DB:-clinical_samples_db}
-      - SECRET_KEY=${SECRET_KEY}
+      - SECRET_KEY=${SECRET_KEY:-55e3be557dfe9c2a81a9e9c4bf78bdf15d66e95be1d6c9592848306ce91aac41}
       - ALGORITHM=${ALGORITHM:-HS256}
       - ACCESS_TOKEN_EXPIRE_MINUTES=${ACCESS_TOKEN_EXPIRE_MINUTES:-30}
       - DEBUG=${DEBUG:-True}
@@ -48,15 +49,6 @@ services:
     networks:
       - clinical_network
     restart: unless-stopped
-    command: >
-      sh -c "
-        echo 'Waiting for database to be ready...' &&
-        sleep 5 &&
-        echo 'Running database migrations...' &&
-        alembic upgrade head &&
-        echo 'Starting application...' &&
-        uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
-      "
 
   # Redis (for future caching needs)
   redis:
