--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ passlib[bcrypt]==1.7.4
 python-multipart==0.0.20
 pydantic==2.11.7
 pydantic-settings==2.10.1
+email-validator==2.2.0
 pytest==8.4.1
 pytest-asyncio==1.1.0
 httpx==0.28.1
