feat: implement comprehensive security middleware stack
  - Add rate limiting middleware (60 req/min, 10 burst limit)
  - Implement request timeout middleware (30s configurable)
  - Add security headers middleware (CSP, X-Frame-Options, etc.)
  - Implement content-type validation middleware
  - Add payload size validation middleware (10MB limit)
  - Configure production-ready CORS settings
  - Add security configuration to .env and docker-compose.yml

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,10 @@ LOG_LEVEL=INFO
 
 # CORS configuration (if needed)
 CORS_ORIGINS=["http://localhost:3000", "http://localhost:8080"]
+
+# Security configuration
+RATE_LIMIT_PER_MINUTE=60
+RATE_LIMIT_BURST=10
+REQUEST_TIMEOUT_SECONDS=30
+MAX_PAYLOAD_SIZE_MB=10
+ENABLE_HSTS=False
