Set up testing environment for phase 6
  - Configure pytest with coverage reporting in pyproject.toml
  - Create conftest.py with comprehensive test fixtures
  - Add test_main.py with 25 basic application tests
  - Set up SQLite in-memory test database
  - Install testing dependencies (pytest, pytest-cov, aiosqlite)
  - 18/25 tests passing, testing infrastructure ready

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,8 @@ pydantic-settings==2.10.1
 email-validator==2.2.0
 pytest==8.4.1
 pytest-asyncio==1.1.0
+pytest-cov==4.0.0
+aiosqlite==0.19.0
 httpx==0.28.1
 python-dotenv==1.1.1
 bcrypt==4.3.0
