--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,9 +59,35 @@ testpaths = ["tests"]
 python_files = ["test_*.py", "*_test.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
-addopts = "-v --strict-markers --tb=short"
+addopts = "-v --strict-markers --tb=short --cov=app --cov-report=html --cov-report=term-missing --cov-fail-under=80"
 markers = [
     "slow: marks tests as slow (deselect with '-m \"not slow\"')",
     "integration: marks tests as integration tests",
-    "unit: marks tests as unit tests"
+    "unit: marks tests as unit tests",
+    "auth: marks tests related to authentication",
+    "samples: marks tests related to samples management"
 ]
+
+[tool.coverage.run]
+source = ["app"]
+omit = [
+    "app/core/config.py",
+    "app/main.py",
+    "tests/*",
+    "venv/*",
+    "alembic/*"
+]
+branch = true
+
+[tool.coverage.report]
+exclude_lines = [
+    "pragma: no cover",
+    "def __repr__",
+    "raise AssertionError",
+    "raise NotImplementedError",
+    "if __name__ == .__main__.:",
+    "if TYPE_CHECKING:",
+    "@abstract"
+]
+show_missing = true
+skip_covered = false
