test: implement Sample CRUD tests and improve test quality
  - Add comprehensive Sample CRUD tests (create, update, delete, get, not_found)
  - Split update test into field validation and user isolation tests
  - Implement Edge Cases tests for pagination and UUID handling
  - Fix pagination validation architecture (remove service layer duplication)
  - Improve exception handling with specific types (ValidationError, AuthorizationError)
  - Simplify Pydantic validation tests to focus on business rules
  - Update timestamp assertions to use logical comparisons

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,7 +65,10 @@ markers = [
     "integration: marks tests as integration tests",
     "unit: marks tests as unit tests",
     "auth: marks tests related to authentication",
-    "samples: marks tests related to samples management"
+    "samples: marks tests related to samples management",
+    "crud: marks tests related to basic CRUD operations",
+    "validation: marks tests related to input validation",
+    "edge_cases: marks tests that test edge cases and boundary conditions"
 ]
 
 [tool.coverage.run]
