fix: align CI flake8 settings with local configuration
  - Remove strict line length limit from CI flake8
  - Use same flake8 settings as local Makefile
  - Ensures CI and local environments are consistent

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
 
     - name: Run linting with flake8
       run: |
-        flake8 app/ tests/ --max-line-length=88 --extend-ignore=E203,W503
+        flake8 app/ tests/
 
     - name: Run type checking with mypy
       run: |
