--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,21 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.11"]
+    
+    services:
+      postgres:
+        image: postgres:15
+        env:
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: test_clinical_samples
+          POSTGRES_USER: postgres
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
 
     steps:
     - name: Checkout code
@@ -48,7 +63,12 @@ jobs:
       run: |
         pytest --cov=app --cov-report=xml --cov-report=term-missing --cov-fail-under=41
       env:
-        DATABASE_URL: sqlite:///./test.db
+        DATABASE_URL: postgresql+asyncpg://postgres:postgres@localhost:5432/test_clinical_samples
+        SECRET_KEY: test-secret-key-for-ci-only-not-production
+        ALGORITHM: HS256
+        ACCESS_TOKEN_EXPIRE_MINUTES: 30
+        DEBUG: True
+        LOG_LEVEL: INFO
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v4
