--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,22 +4,19 @@ on:
   push:
     branches: [ main, develop ]
   pull_request:
-    branches: [ main, develop ]
+    branches: [ main ]
 
 jobs:
   test:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.11"]
     
     services:
       postgres:
         image: postgres:15
         env:
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: test_clinical_samples
-          POSTGRES_USER: postgres
+          POSTGRES_USER: test_user
+          POSTGRES_PASSWORD: test_password
+          POSTGRES_DB: test_clinical_samples_db
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -28,9 +25,12 @@ jobs:
         ports:
           - 5432:5432
 
+    strategy:
+      matrix:
+        python-version: [3.11]
+
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+    - uses: actions/checkout@v4
 
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
@@ -43,15 +43,61 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Run linting with flake8
+    - name: Set up environment variables
       run: |
-        flake8 app/ tests/
+        echo "DATABASE_URL=postgresql+asyncpg://test_user:test_password@localhost:5432/test_clinical_samples_db" >> .env
+        echo "SECRET_KEY=test-secret-key-for-ci-only-not-for-production" >> .env
+        echo "ALGORITHM=HS256" >> .env
+        echo "ACCESS_TOKEN_EXPIRE_MINUTES=30" >> .env
+        echo "DEBUG=False" >> .env
+        echo "LOG_LEVEL=INFO" >> .env
 
-    - name: Run type checking with mypy
+    - name: Run database migrations
       run: |
-        mypy app/
+        alembic upgrade head
 
-    - name: Check code formatting with black
+    - name: Run linting
+      run: |
+        # Stop the build if there are Python syntax errors or undefined names
+        flake8 app/ tests/ --count --select=E9,F63,F7,F82 --show-source --statistics
+        # Exit-zero treats all errors as warnings
+        flake8 app/ tests/ --count --exit-zero --max-complexity=10 --max-line-length=100 --statistics
+
+    - name: Run type checking
+      run: |
+        mypy app/ --ignore-missing-imports
+
+    - name: Run tests with coverage
+      run: |
+        pytest --cov=app --cov-branch --cov-report=xml --cov-report=term -v
+
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v5
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        file: ./coverage.xml
+        flags: unittests
+        name: codecov-umbrella
+        fail_ci_if_error: true
+
+  lint-format:
+    runs-on: ubuntu-latest
+    
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Set up Python 3.11
+      uses: actions/setup-python@v5
+      with:
+        python-version: 3.11
+        cache: 'pip'
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install black isort
+
+    - name: Check code formatting with Black
       run: |
         black --check app/ tests/
 
@@ -59,31 +105,23 @@ jobs:
       run: |
         isort --check-only app/ tests/
 
-    - name: Run tests with coverage
+  security:
+    runs-on: ubuntu-latest
+    
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Set up Python 3.11
+      uses: actions/setup-python@v5
+      with:
+        python-version: 3.11
+
+    - name: Install safety
       run: |
-        pytest --cov=app --cov-report=xml --cov-report=term-missing --cov-fail-under=41
-      env:
-        DATABASE_URL: postgresql+asyncpg://postgres:postgres@localhost:5432/test_clinical_samples
-        SECRET_KEY: test-secret-key-for-ci-only-not-production
-        ALGORITHM: HS256
-        ACCESS_TOKEN_EXPIRE_MINUTES: 30
-        DEBUG: True
-        LOG_LEVEL: INFO
+        python -m pip install --upgrade pip
+        pip install safety
 
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v4
-      with:
-        file: ./coverage.xml
-        flags: unittests
-        name: codecov-umbrella
-        fail_ci_if_error: false
-      env:
-        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-
-    - name: Upload coverage reports as artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: coverage-reports
-        path: |
-          coverage.xml
-          htmlcov/
+    - name: Check for security vulnerabilities
+      run: |
+        pip install -r requirements.txt
+        safety check
