--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,6 @@ fastapi==0.116.1
 uvicorn[standard]==0.35.0
 sqlalchemy==2.0.41
 asyncpg==0.30.0
-psycopg2-binary==2.9.9
 alembic==1.16.4
 python-jose[cryptography]==3.5.0
 passlib[bcrypt]==1.7.4
@@ -11,19 +10,14 @@ python-multipart==0.0.20
 pydantic==2.11.7
 pydantic-settings==2.10.1
 email-validator==2.2.0
-pytest==8.4.1
-pytest-asyncio==1.1.0
-pytest-cov==4.0.0
-aiosqlite==0.19.0
-httpx==0.28.1
 python-dotenv==1.1.1
 bcrypt==4.3.0
 cryptography==45.0.5
 greenlet==3.1.1
 
-# Development dependencies
-black==23.12.1
-flake8==7.0.0
-isort==5.13.2
-mypy==1.8.0
-pytest-watch==4.2.0
+# Testing (needed for CI/CD)
+pytest==8.4.1
+pytest-asyncio==1.1.0
+pytest-cov==4.0.0
+aiosqlite==0.19.0
+httpx==0.28.1
