--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,7 +69,7 @@ jobs:
 
     - name: Run tests with coverage
       run: |
-        pytest --cov=app --cov-branch --cov-report=xml --cov-report=term -v
+        pytest --cov=app --cov-branch --cov-report=xml --cov-report=term --junitxml=junit.xml -v
 
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v5
@@ -79,6 +79,12 @@ jobs:
         flags: unittests
         name: codecov-umbrella
         fail_ci_if_error: true
+
+    - name: Upload test results to Codecov
+      if: ${{ !cancelled() }}
+      uses: codecov/test-results-action@v1
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
 
   lint-format:
     runs-on: ubuntu-latest
@@ -124,4 +130,4 @@ jobs:
     - name: Check for security vulnerabilities
       run: |
         pip install -r requirements.txt
-        safety check
+        safety scan --json
