--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,13 @@ fastapi==0.116.1
 uvicorn[standard]==0.35.0
 sqlalchemy==2.0.41
 asyncpg==0.30.0
+psycopg2-binary==2.9.9
 alembic==1.16.4
-python-jose[cryptography]==3.5.0
+pyjwt==2.10.1
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.20
-pydantic==2.11.7
-pydantic-settings==2.10.1
+pydantic==2.9.2
+pydantic-settings==2.6.1
 email-validator==2.2.0
 python-dotenv==1.1.1
 bcrypt==4.3.0
