--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,8 +41,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install flake8 mypy
+        pip install -r requirements/dev.txt
 
     - name: Set up environment variables
       run: |
@@ -102,18 +101,19 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install black isort
+        pip install -r requirements/dev.txt
 
     - name: Check code formatting with Black
       run: |
-        black --check app/ tests/
+        black --check --diff app/ tests/
 
     - name: Check import sorting with isort
       run: |
-        isort --check-only app/ tests/
+        isort --check-only --diff app/ tests/
 
   security:
     runs-on: ubuntu-latest
+    continue-on-error: true  # Make this job optional for now
     
     steps:
     - uses: actions/checkout@v4
@@ -130,5 +130,5 @@ jobs:
 
     - name: Check for security vulnerabilities
       run: |
-        pip install -r requirements.txt
-        safety scan --output json --continue-on-error
+        pip install -r requirements/prod.txt
+        safety check --json || echo "Security scan completed with warnings"
