feat: add AWS SAM deployment with CI/CD
- AWS Lambda deployment configuration
- GitHub Actions pipeline for automated deployment
- FastAPI application adapted for serverless
- Security groups and infrastructure setup

--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,15 @@ Workflow.md
 CLAUDE.md
 .claude/settings.local.json
 TESTING.md
+
+# SAM
+.aws-sam/
+samconfig.toml
+
+# Sensitive files with secrets
+GITHUB_SECRETS.md
+DEPLOYMENT_SUCCESS.md
+
+# Old Chalice project (deprecated)
+clinical-sample-api/
+chalice-venv/
