--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,7 +1,7 @@
 fastapi==0.104.1
 mangum==0.17.0
-sqlalchemy[asyncio]==2.0.23
-asyncpg==0.29.0
+sqlalchemy==2.0.23
+psycopg2-binary==2.9.9
 pydantic[email]==2.5.1
 pydantic-settings==2.1.0
 python-jose[cryptography]==3.5.0
