fix: correct docs openapi URL and add root endpoint to API Gateway
- Fix openapi_url to use /Prod/openapi.json for correct Swagger docs loading
- Add dedicated root endpoint event to template.yaml for API Gateway
- This resolves Missing Authentication Token error on root endpoint

--- a/template.yaml
+++ b/template.yaml
@@ -58,6 +58,11 @@ Resources:
           Properties:
             Path: /{proxy+}
             Method: ANY
+        RootEndpoint:
+          Type: Api
+          Properties:
+            Path: /
+            Method: GET
         HealthCheck:
           Type: Api
           Properties:
